--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,70 +1,109 @@
 body {
-  margin: 0;
-  color:#fff;
-  background-color:#1E1F20;
-	padding: 2%; font: 18px/1.4 sans-serif;
-	font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+    margin: 0;
+    color: #fff;
+    background-color: #1E1F20;
+    font: 18px/1.4 sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
+
+a:visited,
+a:link
+{
+	color:inherit;
+	text-decoration: none;
+}
+a:visited:after{
+	content: "";
+	text-decoration: none;
+}
+/** **/
+
 @-webkit-keyframes move {
-	from { background-position: 0 0; }
-  to { background-position: -100% 0; }
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -100% 0;
+    }
 }
 
 @keyframes move {
-	from { background-position: 0 0; }
-  to { background-position: -100% 0; }
-}
-.moving-background {
-	width: 560px; 
-	height: 400px; 
-	background-image: url(./imgs/icon.svg);
-	background-position: 0px 0px;
-	animation: move 15s linear alternate infinite;
-  overflow: hidden;
-}
-.header, .header> nav {
-  background-color: rgb(51, 52, 58);
-}
-.App-logo{
-	height: 64px;
-	width: 64px;
-	transition: all 0.5s ease-in-out 0s, visibility 0s linear 0.5s, z-index 0s linear 0.01s;
-}
-.App-logo:hover, .App-logo:focus, .App-logo:focus-within {
-  margin: 60px 5px;
-	height: 192px;
-	width: 192px;
-	transition-delay: 0.2s, 0s, 1s; 
-}
-ul.nav-menu {
-   margin-left: 20px;
- 
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -100% 0;
+    }
 }
 
-/** */
-.sub-menu-parent { position: relative; }
-.sub-menu { 
-  visibility: hidden; /* hides sub-menu */
-  opacity: 0;
-  position: fixed;
-  height:100%;
-  width:96%;
-  transform: translateY(-2em);
-  z-index: -1;
-  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+.moving-background {
+    width: 100%;
+    height: 340px;
+    z-index: auto;
+    background-image: url(./imgs/build_logo.svg);
+    background-position: 0px 0px;
+    animation: move 15s linear alternate infinite;
+    overflow: hidden;
 }
+
+.header,
+.header>nav {
+    background-color: rgb(51, 52, 58);
+}
+
+.App-logo {
+    fill: pink;
+    height: 64px;
+    width: 64px;
+    transition: all 0.5s ease-in-out 0s, visibility 0s linear 0.5s, z-index 0s linear 0.01s;
+}
+
+.App-logo:hover,
+.App-logo:focus,
+.App-logo:focus-within {
+    fill: rosybrown;
+    margin: 60px 5px;
+    height: 192px;
+    width: 192px;
+    transition-delay: 0.2s, 0s, 1s;
+}
+
+
+/** */
+
+.sub-menu-parent {
+    position: relative;
+}
+
+.sub-menu {
+    visibility: hidden;
+    /* hides sub-menu */
+    opacity: 0;
+    position: fixed;
+    height: 100%;
+    width: 70%;
+    transform: translateY(-2em);
+    z-index: -1;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+}
+
 .sub-menu-parent:focus .sub-menu,
 .sub-menu-parent:focus-within .sub-menu,
 .sub-menu-parent:hover .sub-menu {
-  visibility: visible; /* shows sub-menu */
-  opacity: 1;
-  z-index: 1;
-  transform: translateY(0%);
-  transition-delay: 0s, 0s, 0.3s; /* this removes the transition delay so the menu will be visible while the other styles transition */
+    visibility: visible;
+    /* shows sub-menu */
+    opacity: 1;
+    z-index: 1;
+    transform: translateY(0%);
+    transition-delay: 0s, 0s, 0.3s;
+    /* this removes the transition delay so the menu will be visible while the other styles transition */
 }
-.sub-menu > li {
-  color: #E00; display: block; padding: 0.5em 1em; 
-  position: relative;
+
+.sub-menu>li {
+    color: #E00;
+    display: block;
+    padding: 0.5em 1em;
+    position: relative;
     top: 5%;
     width: 100%;
     font-size: 30px;
@@ -72,146 +111,166 @@ ul.nav-menu {
     text-align: center;
     margin-top: 30px;
 }
-.sub-menu> li:hover {
-  color: #F55;
-  font-size: 45px;
+
+.sub-menu>li:hover {
+    color: #F55;
+    font-size: 45px;
     font-weight: 1500;
 }
+
 .sub-menu {
-  background: #1E1F20;
+    background: #1E1F20;
 }
+
+
 /**  */
-.animated-button:link, .animated-button:visited {
-	position: relative;
-	display: block;
-	margin: 30px auto 0;
-	padding: 14px 15px;
-	color: #fff;
-	font-size:20px;
-	font-weight: bold;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	overflow: hidden;
-	letter-spacing: .08em;
-	border-radius: 0;
-	text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
+
+.animated-button:link,
+.animated-button:visited {
+    position: relative;
+    display: block;
+    margin: 30px auto 0;
+    padding: 14px 15px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    letter-spacing: .08em;
+    border-radius: 0;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
 }
-.animated-button:link:after, .animated-button:visited:after {
-	content: "";
-	position: absolute;
-	height: 0%;
-	left: 50%;
-	top: 50%;
-	width: 150%;
-	z-index: -1;
-	-webkit-transition: all 0.75s ease 0s;
-	-moz-transition: all 0.75s ease 0s;
-	-o-transition: all 0.75s ease 0s;
-	transition: all 0.75s ease 0s;
+
+.animated-button:link:after,
+.animated-button:visited:after {
+    content: "";
+    position: absolute;
+    height: 0%;
+    left: 50%;
+    top: 50%;
+    width: 150%;
+    z-index: -1;
+    -webkit-transition: all 0.75s ease 0s;
+    -moz-transition: all 0.75s ease 0s;
+    -o-transition: all 0.75s ease 0s;
+    transition: all 0.75s ease 0s;
 }
-.animated-button:link:hover, .animated-button:visited:hover {
-	color: #FFF;
-	text-shadow: none;
+
+.animated-button:link:hover,
+.animated-button:visited:hover {
+    color: #FFF;
+    text-shadow: none;
 }
-.animated-button:link:hover:after, .animated-button:visited:hover:after {
-	height: 450%;
+
+.animated-button:link:hover:after,
+.animated-button:visited:hover:after {
+    height: 450%;
 }
-.animated-button:link, .animated-button:visited {
-	position: relative;
-	display: block;
-	margin: 30px 20% 0 20%;
-	padding: 14px 15px;
-	color: #fff;
-	font-size:20px;
-	border-radius: 0;
-	font-weight: bold;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	overflow: hidden;
-	letter-spacing: .08em;
-	text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
+
+.animated-button:link,
+.animated-button:visited {
+    position: relative;
+    display: block;
+    margin: 30px 20% 0 20%;
+    padding: 14px 15px;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 0;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    letter-spacing: .08em;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
 }
+
 
 /* Victoria Buttons */
 
-
 .animated-button.victoria-one:after {
-	background: #D24D57;
-	-moz-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
-	-ms-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
-	-webkit-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
-	transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+    background: rgb(233, 158, 164);
+    -moz-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+    -ms-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+    transform: translateX(-50%) translateY(-50%) rotate(-25deg);
 }
+
+
 /***/
+
 a.social-signin {
-  margin-bottom: 20px;
-  width: 220px;
-  height: 36px;
-  border: none;
-  border-radius: 2px;
-  color: #FFF;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  transition: 0.2s ease;
-  cursor: pointer;
+    margin-bottom: 20px;
+    width: 220px;
+    height: 36px;
+    border: none;
+    border-radius: 2px;
+    color: #FFF;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    transition: 0.2s ease;
+    cursor: pointer;
 }
 
 a.social-signin:hover,
 a.social-signin:focus {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  transition: 0.2s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    transition: 0.2s ease;
 }
 
 a.social-signin:active {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-  transition: 0.2s ease;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+    transition: 0.2s ease;
 }
 
 a.social-signin.facebook {
-  background: #32508E;
+    background: #32508E;
 }
 
 a.social-signin.twitter {
-  background: #55ACEE;
+    background: #55ACEE;
 }
 
 a.social-signin.google {
-  background: #DD4B39;
+    background: #DD4B39;
 }
+
 
 /** **/
 
 .HomePage {
-	 text-align: center;
-	 position: relative;
-	 	margin-top: 50px;
-	 	top:10%;
-	 
+    text-align: center;
+    position: relative;
+    margin-top: 50px;
+    top: 10%;
 }
+
 .title {
-	padding-top: 120px;
-  display: block;
-  text-align: center;
+    padding-top: 120px;
+    display: block;
+    text-align: center;
 }
+
 .title-line {
-	display: inline-block;
+    display: inline-block;
     vertical-align: middle;
-    height: 1px;
-    width: 200px;
-    background: pink;
+    height: 2px;
+    width: 230px;
+    background: rgb(186, 219, 235);
 }
+
 .title-text {
-	color: white;
+    color: white;
     vertical-align: middle;
     font-size: 64px;
     letter-spacing: 15px;
@@ -219,22 +278,118 @@ a.social-signin.google {
     font-weight: 100;
     display: inline-block;
 }
-.subtitle {
-		font-size:32px;
-}
-.page-body>.row>.col> p {
-	 position: relative;
-		top:20px;
-		margin-bottom: 30px;
-		font-size: 14px;
-	 color:rgb(110, 112, 119);
-	 transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
-}
-.page-body>.row>.col> p:hover {
-	font-size: 20px;
-	color :rgb(144, 146, 153);
-	transition-delay: 0s, 0s, 0.3s; 
-}
-.page-body {
 
+.subtitle {
+    font-size: 32px;
+}
+
+.page-body>.row>.col>p {
+    position: relative;
+    top: 20px;
+    margin-bottom: 30px;
+    font-size: 14px;
+    color: rgb(110, 112, 119);
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+}
+
+.page-body>.row>.col>p:hover {
+    font-size: 20px;
+    color: rgb(144, 146, 153);
+    transition-delay: 0s, 0s, 0.3s;
+}
+
+
+/***/
+
+.profileCard {
+    padding: 2px;
+    text-align: center;
+    position: relative;
+    margin: auto;
+    font-family: 'Open San';
+    font-style: italic;
+    height: 130px;
+    width: 120px;
+    background: rgba(197, 105, 105, 0.4);
+}
+
+.profileCard-content>p {
+    background: rgba(85, 87, 94, 0.5);
+    padding: 5px;
+    font-size: 12px;
+}
+
+.profileCard>img {
+    -webkit-filter: grayscale(30%);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(30%);
+    padding: 10px;
+    border-radius: 50%;
+}
+
+
+/****/
+
+.floating-button {
+    position: fixed;
+    height: 30%;
+    bottom: 30%;
+    z-index: 50px;
+}
+
+.floating-button .right {
+    position: fixed;
+    right: 16%;
+}
+
+.floating-button .right .material-icons 
+ {
+    font-size: 70px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.floating-button .right .material-icons:hover 
+ {
+    font-size: 100px;
+    color: rgba(248, 228, 227, 0.4);
+    display: inline-flex;
+    vertical-align: middle;
+}
+
+.floating-button .left {
+    position: fixed;
+    left: 16%;
+}
+
+.floating-button .left .material-icons 
+ {
+    font-size: 70px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.floating-button .left .material-icons:hover 
+ {
+    font-size: 100px;
+    color: rgba(248, 228, 227, 0.4);
+    display: inline-flex;
+    vertical-align: middle;
+}
+
+.floating-button .left .material-icons {
+    font-size: 70px;
+    display: inline-flex;
+}
+
+.floating-button .toggle-text span  {
+    visibility: hidden;
+    font-size: 10px;
+    transition: all 0.5s ease-in-out 0.1s, visibility 0.1s linear 0.5s, z-index 0s linear 0.01s;
+}
+
+.floating-button .toggle-text:hover span {
+    visibility: visible;
+    transition-delay: 0.2s, 0s, 1s;
+    font-size: 15px;
 }
